--- a/blog/blogpagestyle.css
+++ b/blog/blogpagestyle.css
@@ -24,7 +24,7 @@ html {
 }
 
 body {
-  background-image: url("bg.jpg");
+  background-image: url("./bg.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -479,7 +479,7 @@ font-size: 36px;
 .footer {
   padding: 20px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)),
-    url("./images/istockphoto-1465642013-170667a.webp");
+    url("../images/istockphoto-1465642013-170667a.webp");
   background-size: cover; /* Ensure the background image covers the entire container */
   background-position: center; /* Center the background image */
   background-repeat: no-repeat; /* Prevent the background image from repeating */
