--- a/login/login.css
+++ b/login/login.css
@@ -21,7 +21,7 @@ body::before {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url("images/carousel-img-1.jpg");
+  background: url("../images/carousel-img-1.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -32,22 +32,22 @@ body::before {
 
 @keyframes change {
   0% {
-    background-image: url(images/carousel-img-1.jpg);
+    background-image: url(../images/carousel-img-1.jpg);
   }
   20% {
-    background-image: url(images/carousel-img-2.jpg);
+    background-image: url(../images/carousel-img-2.jpg);
   }
   40% {
-    background-image: url(images/carousel-img-3.jpg);
+    background-image: url(../images/carousel-img-3.jpg);
   }
   60% {
-    background-image: url(images/carousel-img-4.jpg);
+    background-image: url(../images/carousel-img-4.jpg);
   }
   80% {
-    background-image: url(images/carousel-img-5.jpg);
+    background-image: url(../images/carousel-img-5.jpg);
   }
   100% {
-    background-image: url(images/carousel-img-6.jpg);
+    background-image: url(../images/carousel-img-6.jpg);
   }
 }
 @keyframes fadeIn {
