--- a/about/about.css
+++ b/about/about.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 
 * {
     padding: 0;
@@ -8,7 +8,7 @@
     font-weight: 400;
     outline: none;
     list-style-type: none;
-    font-family: 'Poppins', Verdana, Geneva, Tahoma, sans-serif, Georgia, 'Times New Roman', Times, serif;
+    font-family: "Playfair Display", serif;
 }
 
 :root {
