--- a/FAQS/faqpagestyle.css
+++ b/FAQS/faqpagestyle.css
@@ -9,6 +9,12 @@
   outline: none;
   scroll-behavior: smooth;
   font-family: "Playfair Display", serif;
+  
+}
+body.loaded {
+  display: block;
+  opacity: 1;
+  transition: opacity 0.6s ease;
 }
 
 :root {
@@ -27,10 +33,13 @@ body {
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+  background-image: url('../faq/image.jpeg');
+  background-size: cover;
 
 
   color: var(--txt-color);
 }
+
 body::-webkit-scrollbar {
   display: none;
 }
@@ -158,237 +167,163 @@ section {
 /*login/register button css ends*/
 
   
-.section-heading{
-  margin-bottom: 1.7rem;
-  transform: translateY(0px); 
-  transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.3s ease;
-}
-.faq {
-  min-height: 50vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.faqs-whole-container {
+  max-width: 1300px;
+  margin: 100px auto 20px; 
+  background-color: rgba(255, 255, 255, 0.281);
+  color: rgb(0, 0, 0);
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px #5959597a(0, 0, 0, 0.1);
+  display: flex; 
+  overflow: hidden; 
+  flex-direction: row;
   justify-content: center;
-  padding: 2rem;
-  margin-bottom: 0.5rem;
-  font-size: 25px;
-}
-
-.faq_container {
-  margin: 0 auto;
-  background-image: url('../faq/image.jpeg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-
-.faq_box {
-  display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  box-shadow: 0 0 15px #2b2b2bb9;
+  
 }
 
-.col {
-  flex: 1 1 50%;
+.faqs-whole-container-faq-heading {
+  position: absolute;
+  left: 40%;
+  margin-bottom: 20px;
+  color: rgb(0, 0, 0);
+  margin-top: 10px;
+  font-family: "Time New Roman", serif;
+  font-size: xx-large;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.faqs-whole-container-content {
+  margin-top: 70px;
+  flex: 1; 
+  padding: 20px; 
+  font-weight: bold;
+}   
+
+.faqs-whole-container-toggle-icon {
+  margin-left: 5px;
+  float: right;
+}
+
+.faqs-whole-container-image {
   padding: 20px;
 }
 
-.faq .image {
-  flex: 1 1 40%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.faqs-whole-container-faq-item {
+  margin-bottom: 20px;
+  border-bottom: 3px solid;
+  border-image: linear-gradient(to right, #00e313, #006902, #006902, #00e313);
+  border-image-slice: 1;
+  padding-bottom: 20px;
+  transition: all 0.5s ease;
 }
 
-.faq .image .faq-img {
-  max-width: 60%;
+.faqs-whole-container-faq-item:last-child {
+  border-bottom: none;
+}
+
+.faqs-whole-container-question {
+  cursor: pointer;
+  font-size: 18px;
+  color: rgb(0, 0, 0);
+  transition: color 0.5s ease; 
+}
+
+.faqs-whole-container-question:hover {
+  color: #05a400;
+}
+
+.faqs-whole-container-answer {
+  padding: 1px 0;
+  font-size: 16px;
+  transition: max-height 0.5s ease-out, opacity 0.5s ease-out;
+  max-height: 1px;
+  overflow: hidden;
+  opacity: 0;
+  font-weight: normal;
+  margin-top: 5px; 
+  line-height: 1.5;
+  letter-spacing: 0.5px;
+}
+
+.faqs-whole-container-faq-item.active .faqs-whole-container-question {
+  color: #05a400; 
+}
+
+.faqs-whole-container-faq-item.active .faqs-whole-container-answer {
+  display: block;
+  max-height: 1000px; 
+  opacity: 1;
+}
+
+.faqs-whole-container-image img {
+  width: 500px;
+  height: 450px;
+  display: block;
+  border-radius: 10px;
+  margin-top: 50px;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  animation: flickerAnimation 1s linear 1;
+}
+.faqs-whole-container-image img {
   height: auto;
   object-fit: cover;
   animation: moveUpDown 1.5s infinite alternate;
 }
-
-@media screen and (max-width: 425px) {
-  .faq .row {
-    flex-direction: column;
-  }
-
-  .faq .image .faq-img {
-    display: none;
-  }
-
-  .faq .accordion-container {
-    flex: 1 1 100%;
-    padding: 1rem;
-  }
-}
-
 @keyframes moveUpDown {
   0% {
     transform: translateY(0);
   }
   100% {
-    transform: translateY(-10px);
+    transform: translateY(-20px);
   }
 }
 
-.faq .accordion-container {
-  flex: 1 1 55%;
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  border-radius: 5px;
-  padding: 2rem;
-  background-color: #f8f9fa;
-  border: 1px solid #dee2e6;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-}
+@media screen and (max-width: 450px) {
+  .faqs-whole-container {
+      max-width: 100%;
+      margin: 10px;
+      display: flex;
+      flex-direction: column;
+      margin-top: 70px;
+  }
 
-@media screen and (max-width: 426px) {
-  .faq .accordion-container {
-    flex: 1 1 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: #fff;
-    border-radius: 5px;
-    padding: 2rem;
-    background-color: #f8f9fa;
-    border: 1px solid #dee2e6;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  .faqs-whole-container-faq-heading {
+      left: 22px;
+      margin-top: 20px;
+      font-size: 20px;
+      font-weight: 700;
+  }
+
+  .faqs-whole-container-faq-item {
+      padding: 15px;
+  }
+
+  .faqs-whole-container-image {
+      order: 1;
+  }
+
+  .faqs-whole-container-content {
+      order: 2;
+  }
+  
+  .faqs-whole-container-question {
+      font-size: 15px;
+  }
+
+  .faqs-whole-container-image img {
+      width: 100%;
+      height: auto;
+      margin-top: 20px;
+      border-radius: 5px;
   }
 }
-
-.faq .accordion {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 1rem;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  overflow: hidden;
-}
-
-.faq .accordion-header {
-  display: flex;
-  gap: 20px;
-  padding: 1rem;
-  cursor: pointer;
-  font-weight: bold;
-  background-color: #e0e0e0;
-}
-
-.faq .accordion-header:hover {
-  background-color: #d0d0d0;
-}
-
-.faq .accordion-header span {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.faq .accordion-header h3 {
-  width: 100%;
-  font-size: 1.8rem;
-  align-content: center;
-  color: #000;
-  margin: 0;
-}
-
-.faq .accordion-body {
-  display: none;
-  padding: 1rem;
-  line-height: 1.5;
-  font-size: 1.6rem;
-  color: #000;
-  background-color: #fff;
-  transition: color 0.3s ease;
-}
-
-.faq .accordion-header img {
-  transition: transform 0.3s ease;
-}
-
-.faq .accordion.active .accordion-header img {
-  transform: rotate(360deg);
-}
-
-.faq .accordion.active .accordion-body {
-  display: block;
-}
-
-.faq .accordion-body:hover {
-  color: #1a8342; /* Change text color on hover */
-}
-
-
-.table {
-  width: 100%;
-  margin-top: 20px;
-  border-collapse: collapse;
-  background-color: #f5f5f5;
-}
-
-.table th,
-.table td {
-  text-align: center;
-  padding: 25px 15px;
-  border-bottom: 1px solid #b9b9b9;
-}
-
-.table th {
-  color: #333;
-}
-
-.table i.uil {
-  font-size: 20px;
-}
-
-.positive-attribute {
-  color: #22CFB9;
-}
-
-.negative-attribute {
-  color: #FF6347;
-}
-
-.faq_container{
-    padding: 20px;
-    padding-top: 7%;
-}
-.faq_heading{
-  color:black;
-  text-decoration: solid;
-  font-weight:bold;
-  font-size: larger;
-  padding-bottom: 2%;
-  margin: 20px 0;
-  text-align: center;
-  font-size: 2em;
-  margin: 20px 0;
-}
-
-@media screen  and (max-width:1024px){
-  .faq_container{
-    padding-top: 15%;
-  }
-}
-@media screen  and (max-width:425px){
-  .faq_container{
-    padding-top: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .faq_box{
-    display: block;
-  }
-}
-
-
-
-  /* footer */
- 
-  .footer {
+.footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -905,4 +840,3 @@ body.dark-theme .faq .accordion-body {
   background-color: #1e1e1e;
   color: #ccc;
 }
-
