Revert "font added to blogs"

--- a/blog/blogpagestyle.css
+++ b/blog/blogpagestyle.css
@@ -8,7 +8,7 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: "Poppins";
+  font-family: "Playfair Display", serif;
 }
 
 :root {
