--- a/about/about.css
+++ b/about/about.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
 
 * {
@@ -8,7 +9,7 @@
     font-weight: 400;
     outline: none;
     list-style-type: none;
-    font-family: "Playfair Display", serif;
+    font-family: "Poppins";
 }
 
 :root {
