--- a/buyproducts/buy_products.css
+++ b/buyproducts/buy_products.css
@@ -8,7 +8,7 @@
   border: none;
   outline: none;
   scroll-behavior: smooth;
-  font-family: "Playfair Display", serif;
+  font-family: "Poppins";
 }
 
 /* Customizing the title */
