--- a/style.css
+++ b/style.css
@@ -81,9 +81,17 @@ section {
   font-size: 2vmax;
   color: var(--txt-color);
   font-weight: 600;
-  margin-right: 0;
+  /* margin-right: 40px; */
   cursor: default;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+.logo > h3{
+  margin-right: 50px;
+}
+
 .navbar a {
   font-size: 1.5vmax;
 
@@ -100,7 +108,8 @@ section {
    top: 0;
    left: 0;
    width:100%;
-   padding:2rem 9%;
+   padding: 2rem 2%;
+   padding-right: 120px;
    background-color: var(--bg-color);
    display: flex;
    justify-content: space-between;
