--- a/testimonials/testimonials.css
+++ b/testimonials/testimonials.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
 .wrapper {
     padding-top: 80px;
@@ -8,7 +7,6 @@
     margin: 0 auto;
     position: relative;
     overflow: hidden; 
-    font-family: "Poppins";
 }
 
 .wrapper i {
